# embedded-bridge

./: .gitignore  Cargo.toml  LICENSE
bridge-common/: Cargo.toml
bridge-common/src/: encoding.rs  lib.rs
bridge-firmware/: Cargo.toml
bridge-firmware/src/: main.rs
bridge-host/: Cargo.toml
bridge-host/examples/: nucleo_f042_gpio_blinky.rs  nucleo_f042_i2c_alphabeter.rs  nucleo_f042_spi_apa102c.rs
bridge-host/src/: common.rs  gpio.rs  i2c.rs  io.rs  lib.rs  main.rs  spi.rs
