[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
edition = "2018"
name = "bridge-firmware"
version = "0.1.0"

[dependencies]
bare-metal = "0.2.4"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
heapless = "0.5.0"
nb = "0.1.2"
panic-halt = "0.2.0"
postcard = "0.4.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.bridge-common]
path = "../bridge-common"

[dependencies.serde]
default-features = false
version = "1.0.99"

[dependencies.stm32f0xx-hal]
features = ["stm32f042", "rt"]
version = "0.15.1"
