[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
edition = "2018"
name = "bridge-firmware"
version = "0.1.0"

[features]
stm32f042 = ["stm32f0xx-hal/stm32f042"]
stm32f072 = ["stm32f0xx-hal/stm32f072"]

default = ["stm32f042"]

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
heapless = "0.5.1"
nb = "0.1.2"
panic-halt = "0.2.0"
postcard = "0.4.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.bridge-common]
path = "../bridge-common"

[dependencies.serde]
default-features = false
version = "1.0.101"

[dependencies.stm32f0xx-hal]
features = ["rt"]
version = "0.15.1"
