[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
edition = "2018"
name = "bridge-host"
version = "0.1.0"
[dependencies]
embedded-hal = "0.2.3"
heapless = "0.5.0"
log = "0.4.8"
postcard = "0.4.0"
serial = "0.4.0"

[dependencies.bridge-common]
path = "../bridge-common"

[dev-dependencies]
simplelog = "0.7.1"
smart-leds = "0.3.0"
ssd1306 = "0.2.6"
apa102-spi = "0.2.0"
